# jcecc-openedx-plugin

./: Makefile  pyproject.toml  setup.py
jcecc_oauth2_wordpress/: __about__.py  wp_oauth.py
requirements/: stable.txt
