[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "jcecc-openedx-plugin"
version = "1.0.8"
authors = [
  { name="Cyrus Chan", email="cyrus@gigantic.work" },
]
description = "An Open edX Python Social Auth backend for Wordpress"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "edx-oauth2-wordpress-backend>=1.0.8"
]
keywords = ["Open edX", "oauth", "Wordpress"]

[project.urls]
"Homepage" = "https://github.com/cyruschan360/jcecc-openedx-plugin"
"Bug Tracker" = "https://github.com/cyruschan360/jcecc-openedx-plugin/issues"
